2018-05-02  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-message-header): Use rmail-get-header.
	* lisp/bbdb-rmail.el (bbdb/rmail-header): Remove.

2018-03-30  Roland Winkler  <winkler@gnu.org>
	Unify the handling of new records, new fields and modified fields.

	* bbdb.el (bbdb-check-name): Handle both names and akas.  New
	optional arg warn.
	(bbdb-check-mail): New function.
	(bbdb-register-record): Use bbdb-check-name and bbdb-check-mail.
	New optional arg warn.
	(bbdb-change-record): Fix docstring.

	* bbdb.el (bbdb-record-set-field):
	* bbdb-com.el (bbdb-read-record, bbdb-create-internal):
	Use bbdb-check-name and bbdb-check-mail.

	* bbdb-com.el (bbdb-record-edit-address): Allow arg address be nil
	for new addresses.
	(bbdb-record-edit-phone): Operate only on the phone number that we
	change.
	(bbdb-read-record, bbdb-read-field): Use bbdb-record-edit-phone.
	Always use bbdb-record-set-field.

2018-03-26  Roland Winkler  <winkler@gnu.org>
	* bbdb.el (bbdb-register-record): Don't be fooled by existing
	records.

2018-03-17  Vincent Belaïche  <vincentb1@users.sourceforge.net>
	* lisp/Makefile.am (abs_target): Make absolute path for
	bbdb-loaddefs.el MSWindows aware.

2018-03-17  Roland Winkler  <winkler@gnu.org>
	* bbdb.el (bbdb-register-record): New function renamed from
	bbdb-hash-record.
	(bbdb-parse-records, bbdb-change-record): Use it.

2018-03-17  Roland Winkler  <winkler@gnu.org>
	* bbdb-com.el (bbdb-create-internal): Bug fix.  Support old
	calling sequence with warning.

2018-03-02  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb.el: Add missing "Maintainer:" header

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase version number to 3.2.

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* bbdb-tex.el (bbdb-tex-alist, bbdb-tex-address-layout): Declare
	defcustom type.

2018-01-06  Roland Winkler  <winkler@gnu.org>
	* bbdb-vm-aux.el: Don't require VM when compiled.

2018-01-06  Stefan Monnier <monnier@iro.umontreal.ca>